--- a/apotheke/NEWS
+++ b/apotheke/NEWS
@@ -1,3 +1,8 @@
+Moved to berliOS.de (2002-05-02)
+-------------------------------
+Since today apotheke is hosted by berliOS an open source hoster.
+
+
 Version 0.1 (2002-03-20)
 -----------------------
   o displays detailed CVS file information
