--- a/apotheke/ChangeLog
+++ b/apotheke/ChangeLog
@@ -1,3 +1,12 @@
+2002-11-01  Jens Finke <jens@triq.net>
+
+	Finished commit and update dialogs. Some minor polishing and
+	packaging stuff.
+
+	Removed the 'intelligent' glutter position algorithm.
+
+	* configure.in: Bumped version to 0.2.
+
 2002-10-25  Jens Finek <jens@triq.net>
 
 	Based on a patch by Andy Piper <andy.piper@freeuk.com>.
