--- a/apotheke/NEWS
+++ b/apotheke/NEWS
@@ -1,3 +1,6 @@
+Version 0.2 (2002-11-02)
+-----------------------
+
 Moved to berliOS.de (2002-05-02)
 -------------------------------
 Since today apotheke is hosted by berliOS an open source hoster.
